--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,24 +24,25 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-    "Pillow>=8.0.0",
-    "qrcode[pil]>=7.0.0",
-    "pyzbar>=0.1.9",
-    "polyline>=2.0.0",
     "click>=8.0.0",
     "geopy>=2.0.0",
+    "Pillow>=8.0.0",
+    "polyline>=2.0.0",
     "pyproj>=3.0.0",
-    "requests>=2.25.0",
+    "pyzbar>=0.1.9",
+    "qrcode[pil]>=7.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=6.0.0",
-    "pytest-cov>=2.0.0",
+    "beautifulsoup4>=4.9.0",
     "black>=21.0.0",
-    "isort>=5.0.0",
     "flake8>=3.8.0",
+    "isort>=5.0.0",
     "mypy>=0.800",
+    "pytest-cov>=2.0.0",
+    "pytest>=6.0.0",
+    "requests>=2.25.0",
 ]
 
 [project.scripts]
