--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,14 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-    "click>=8.0.0",
-    "geopy>=2.0.0",
-    "Pillow>=8.0.0",
+    "click>=8.2.0",
+    "geopy>=2.4.0",
+    "Pillow>=11.0.0",
     "polyline>=2.0.0",
-    "pyproj>=3.0.0",
+    "pyproj>=3.7.0",
     "pyzbar>=0.1.9",
-    "qrcode[pil]>=7.0.0",
+    "qrcode[pil]>=8.0.0",
+    "scipy>=1.16.0",
 ]
 
 [project.optional-dependencies]
@@ -43,6 +44,14 @@ dev = [
     "pytest-cov>=2.0.0",
     "pytest>=6.0.0",
     "requests>=2.25.0",
+]
+web = [
+    "flask>=2.0.0",
+]
+analysis = [
+    "numpy>=1.21.0",
+    "geographiclib>=2.0",
+    "matplotlib>=3.3.0",
 ]
 
 [project.scripts]
