feat: enhance configuration and documentation; fix typos and improve code clarity

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,71 @@
         "tests"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "cSpell.words": [
+        "addopts",
+        "airscore",
+        "beautifulsoup",
+        "ctype",
+        "dataclasses",
+        "defaultdicts",
+        "ellps",
+        "endspeed",
+        "fminbound",
+        "forcelist",
+        "frombuffer",
+        "geographiclib",
+        "geopy",
+        "htmlcov",
+        "imdecode",
+        "IMREAD",
+        "imwrite",
+        "isort",
+        "jsonify",
+        "LANCZOS",
+        "latlng",
+        "levelname",
+        "linecontrol",
+        "lons",
+        "matplotlib",
+        "minversion",
+        "mypy",
+        "ndarray",
+        "nosetests",
+        "numpy",
+        "oneline",
+        "openair",
+        "optiline",
+        "optimised",
+        "optype",
+        "Placemark",
+        "pnum",
+        "pycache",
+        "pypa",
+        "PYPI",
+        "pyproj",
+        "pyproject",
+        "pytest",
+        "pyxctsk",
+        "pyzbar",
+        "qrcode",
+        "scipy",
+        "sdist",
+        "setuptools",
+        "Soaringlab",
+        "SUBDIRS",
+        "svgs",
+        "taskline",
+        "testpaths",
+        "turnpoint",
+        "turnpointcylinder",
+        "turnpoints",
+        "urllib",
+        "venv",
+        "werkzeug",
+        "xcontest",
+        "xctrack",
+        "XCTSK",
+        "xtol"
+    ]
 }
