--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,8 @@ repos:
     rev: 7.3.0
     hooks:
       - id: flake8
-        name: flake8 (ignore E501)
-        args: ["--extend-ignore=E501"]
+        name: flake8 (ignore E501, E203)
+        args: ["--extend-ignore=E501,E203"]
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.16.1
     hooks:
