fix: update mypy configuration to include 'src' in mypy_path and add missing ignore rules

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,7 +2,7 @@
 python_version = 3.8
 warn_return_any = True
 warn_unused_configs = True
-mypy_path = stubs
+mypy_path = stubs:src
 disable_error_code = no-untyped-def, no-untyped-call
 
 [mypy-geopy.*]
@@ -21,6 +21,18 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-qrcode.*]
+ignore_missing_imports = True
+
+[mypy-PIL.*]
+ignore_missing_imports = True
+
+[mypy-click.*]
+ignore_missing_imports = True
+
+[mypy-pyproj.*]
+ignore_missing_imports = True
+
+[mypy-pytest.*]
 ignore_missing_imports = True
 
 [mypy-scripts.task_viewer.airscore_clone.*]
