fix: add missing words 'brentq' and 'subinterval' to cSpell configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "addopts",
         "airscore",
         "beautifulsoup",
+        "brentq",
         "ctype",
         "dataclasses",
         "defaultdicts",
@@ -56,6 +57,7 @@
         "setuptools",
         "Soaringlab",
         "SUBDIRS",
+        "subinterval",
         "svgs",
         "taskline",
         "testpaths",
