--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "beautifulsoup4>=4.9.0",
+    "deepdiff>=8.5.0",
     "black>=25.1.0",
     "flake8>=7.3.0",
     "isort>=6.0.1",
