--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "pyzbar>=0.1.9",
     "qrcode[pil]>=8.0.0",
     "scipy>=1.16.0",
+    "simplekml>=1.3.6",
 ]
 
 [project.optional-dependencies]
